--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidValidators</string>
+    <string name="no_data_found">No Data Found</string>
+    <string name="too_many_request">Too Many Request</string>
+    <string name="close_icon">Close Icon</string>
 </resources>
